--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,10 +1,24 @@
-# Exclude node_modules directory
-node_modules/
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# Exclude environment variables file
-.env
+node_modules
+dist
+dist-ssr
+*.local
 
-# Other common exclusions
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
 .DS_Store
-npm-debug.log
-yarn-error.log
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
