--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,9 @@
     "axios": "^1.6.7",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
+    "laravel-echo": "^2.0.2",
     "lucide-react": "^0.344.0",
+    "pusher-js": "^8.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.0",
