--- a/frontend/src/package.json
+++ b/frontend/src/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@tanstack/react-query": "^5.28.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
     "lucide-react": "^0.344.0",
@@ -19,7 +20,6 @@
     "react-hook-form": "^7.51.0",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.22.3",
-    "socket.io-client": "^4.7.4",
     "tailwind-merge": "^2.2.1",
     "zod": "^3.22.4",
     "zustand": "^4.5.2"
